--- a/VCS/AEON/New Group/Cell/messaging_cell/receiver_cell/MesgReceiverTableViewCell.xib
+++ b/VCS/AEON/New Group/Cell/messaging_cell/receiver_cell/MesgReceiverTableViewCell.xib
@@ -26,7 +26,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="351" height="140"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="aeon_logo" translatesAutoresizingMaskIntoConstraints="NO" id="fpa-W7-qab">
-                                <rect key="frame" x="10" y="25" width="40" height="40"/>
+                                <rect key="frame" x="10" y="10" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="40" id="ST1-rq-E3o"/>
                                     <constraint firstAttribute="height" constant="40" id="xuS-aC-lbp"/>
@@ -39,7 +39,7 @@
                                 </userDefinedRuntimeAttributes>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="b1G-ab-e0m">
-                                <rect key="frame" x="55" y="10" width="291" height="5"/>
+                                <rect key="frame" x="55" y="125" width="291" height="5"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="05-02-2019 5:00 AM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n3z-ae-bLd">
                                         <rect key="frame" x="5" y="-8" width="276" height="21"/>
@@ -57,10 +57,10 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6bX-eg-IOQ">
-                                <rect key="frame" x="55" y="25" width="226" height="110"/>
+                                <rect key="frame" x="55" y="10" width="226" height="105"/>
                                 <subviews>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IwT-6A-laf">
-                                        <rect key="frame" x="10" y="5" width="206" height="100"/>
+                                        <rect key="frame" x="10" y="5" width="206" height="95"/>
                                         <color key="backgroundColor" red="0.67473709037996688" green="0.75242842907832963" blue="0.55435935853721463" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -87,11 +87,11 @@
                         <constraints>
                             <constraint firstItem="fpa-W7-qab" firstAttribute="leading" secondItem="Qef-de-P42" secondAttribute="leading" constant="10" id="2cB-pz-R8h"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="6bX-eg-IOQ" secondAttribute="trailing" constant="70" id="CQq-pF-SxH"/>
-                            <constraint firstItem="6bX-eg-IOQ" firstAttribute="top" secondItem="b1G-ab-e0m" secondAttribute="bottom" constant="10" id="I59-sq-027"/>
                             <constraint firstItem="6bX-eg-IOQ" firstAttribute="leading" secondItem="fpa-W7-qab" secondAttribute="trailing" constant="5" id="Jvn-yr-JTI"/>
-                            <constraint firstAttribute="bottom" secondItem="6bX-eg-IOQ" secondAttribute="bottom" constant="5" id="Kd0-ea-Pfs"/>
-                            <constraint firstItem="b1G-ab-e0m" firstAttribute="top" secondItem="Qef-de-P42" secondAttribute="top" constant="10" id="MWg-ZG-LQd"/>
+                            <constraint firstItem="b1G-ab-e0m" firstAttribute="top" secondItem="6bX-eg-IOQ" secondAttribute="bottom" constant="10" id="ZWY-bM-IFf"/>
+                            <constraint firstItem="6bX-eg-IOQ" firstAttribute="top" secondItem="Qef-de-P42" secondAttribute="top" constant="10" id="a5h-Pu-LY7"/>
                             <constraint firstItem="b1G-ab-e0m" firstAttribute="leading" secondItem="fpa-W7-qab" secondAttribute="trailing" constant="5" id="ccr-gL-3co"/>
+                            <constraint firstAttribute="bottom" secondItem="b1G-ab-e0m" secondAttribute="bottom" constant="10" id="h9A-zV-Nvh"/>
                             <constraint firstAttribute="trailing" secondItem="b1G-ab-e0m" secondAttribute="trailing" constant="5" id="rfG-jN-kdK"/>
                             <constraint firstItem="fpa-W7-qab" firstAttribute="top" secondItem="6bX-eg-IOQ" secondAttribute="top" id="zX5-HX-Z9p"/>
                         </constraints>
