--- a/VCS/AEON/New Group/Cell/messaging_cell/sender_cell/SendPhotoTableViewCell.xib
+++ b/VCS/AEON/New Group/Cell/messaging_cell/sender_cell/SendPhotoTableViewCell.xib
@@ -1,32 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="379" id="KGk-i7-Jjw" customClass="SendPhotoTableViewCell" customModule="AEONVCS" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="379" id="KGk-i7-Jjw" customClass="SendPhotoTableViewCell" customModule="AEONMember" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="345" height="379"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="345" height="378.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="345" height="379"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EMf-az-v6B">
-                        <rect key="frame" x="0.0" y="0.0" width="345" height="378.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="345" height="379"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jim-tw-5OA">
-                                <rect key="frame" x="10" y="10" width="325" height="20"/>
+                                <rect key="frame" x="10" y="349" width="325" height="20"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="05-05-2019 2:30 PM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kCO-yb-zIE">
-                                        <rect key="frame" x="199" y="2.5" width="121" height="15"/>
+                                        <rect key="frame" x="200" y="2.5" width="120" height="15"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -39,33 +37,38 @@
                                     <constraint firstAttribute="trailing" secondItem="kCO-yb-zIE" secondAttribute="trailing" constant="5" id="s8z-pW-Lf0"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TpU-5t-cSF" customClass="CardView" customModule="AEONVCS" customModuleProvider="target">
-                                <rect key="frame" x="75" y="35" width="260" height="310"/>
+                            <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="TpU-5t-cSF" customClass="CardView" customModule="AEONMember" customModuleProvider="target">
+                                <rect key="frame" x="65" y="44" width="270" height="300"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="aeon_logo" translatesAutoresizingMaskIntoConstraints="NO" id="d3I-kg-TbR">
-                                        <rect key="frame" x="5" y="5" width="250" height="300"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="270" height="300"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="300" id="Clp-lp-M8G"/>
-                                            <constraint firstAttribute="width" constant="250" id="n69-vI-gmR"/>
+                                            <constraint firstAttribute="height" constant="300" id="X5c-Cj-X9H"/>
+                                            <constraint firstAttribute="width" constant="270" id="txN-SJ-eec"/>
                                         </constraints>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.71764705880000002" green="0.0" blue="0.50588235290000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
-                                    <constraint firstItem="d3I-kg-TbR" firstAttribute="leading" secondItem="TpU-5t-cSF" secondAttribute="leading" constant="5" id="G3T-ml-iuG"/>
-                                    <constraint firstItem="d3I-kg-TbR" firstAttribute="top" secondItem="TpU-5t-cSF" secondAttribute="top" constant="5" id="Q2l-lq-QT2"/>
-                                    <constraint firstAttribute="bottom" secondItem="d3I-kg-TbR" secondAttribute="bottom" constant="5" id="iPM-wt-ANR"/>
-                                    <constraint firstAttribute="trailing" secondItem="d3I-kg-TbR" secondAttribute="trailing" constant="5" id="pL6-Ph-xsQ"/>
+                                    <constraint firstItem="d3I-kg-TbR" firstAttribute="leading" secondItem="TpU-5t-cSF" secondAttribute="leading" id="3dy-hD-aIh"/>
+                                    <constraint firstAttribute="trailing" secondItem="d3I-kg-TbR" secondAttribute="trailing" id="KPn-4H-4r7"/>
+                                    <constraint firstAttribute="bottom" secondItem="d3I-kg-TbR" secondAttribute="bottom" id="iIi-QQ-SOX"/>
+                                    <constraint firstItem="d3I-kg-TbR" firstAttribute="top" secondItem="TpU-5t-cSF" secondAttribute="top" id="zQZ-Tq-0si"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="TpU-5t-cSF" firstAttribute="top" secondItem="jim-tw-5OA" secondAttribute="bottom" constant="5" id="4Ts-xn-CRV"/>
                             <constraint firstAttribute="trailing" secondItem="TpU-5t-cSF" secondAttribute="trailing" constant="10" id="9rc-o1-y0R"/>
+                            <constraint firstAttribute="bottom" secondItem="jim-tw-5OA" secondAttribute="bottom" constant="10" id="E9V-AY-v7M"/>
                             <constraint firstAttribute="trailing" secondItem="jim-tw-5OA" secondAttribute="trailing" constant="10" id="KWi-bK-IEK"/>
+                            <constraint firstItem="jim-tw-5OA" firstAttribute="top" secondItem="TpU-5t-cSF" secondAttribute="bottom" constant="5" id="VAn-RX-Co3"/>
                             <constraint firstItem="jim-tw-5OA" firstAttribute="leading" secondItem="EMf-az-v6B" secondAttribute="leading" constant="10" id="iVL-XI-Xfo"/>
-                            <constraint firstItem="jim-tw-5OA" firstAttribute="top" secondItem="EMf-az-v6B" secondAttribute="top" constant="10" id="zgS-TD-FUt"/>
                         </constraints>
                     </view>
                 </subviews>
