--- a/VCS/AEON/New Group/Cell/sec_ques_register_cell/SecQuesRegisterTableViewCell.xib
+++ b/VCS/AEON/New Group/Cell/sec_ques_register_cell/SecQuesRegisterTableViewCell.xib
@@ -46,8 +46,8 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="o41-9T-JuL">
                                         <rect key="frame" x="334" y="0.0" width="40" height="40"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrowtriangle.down.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="pBf-fj-pg9">
-                                                <rect key="frame" x="8" y="14.5" width="30" height="11"/>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="downarrow" translatesAutoresizingMaskIntoConstraints="NO" id="pBf-fj-pg9">
+                                                <rect key="frame" x="8" y="12.5" width="30" height="15"/>
                                                 <color key="tintColor" red="0.71764705880000002" green="0.0" blue="0.50588235290000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="30" id="PRf-hr-ed5"/>
@@ -78,7 +78,7 @@
                                             <constraint firstAttribute="width" constant="40" id="mL4-bD-xkQ"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" name="PyidaungsuBook" family="Pyidaungsu Book" pointSize="16"/>
-                                        <color key="textColor" red="0.71764705880000002" green="0.0" blue="0.50588235290000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <color key="textColor" red="0.76862745099999996" green="0.18039215689999999" blue="0.57254901960000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" clipsSubviews="YES" contentMode="scaleAspectFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="DzR-ga-LFi">
@@ -90,7 +90,7 @@
                                                     <fragment content="error">
                                                         <attributes>
                                                             <color key="NSColor" red="0.91745740180000002" green="0.25346475839999999" blue="0.14499741790000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                                            <font key="NSFont" size="10" name=".SFNS-Regular"/>
+                                                            <font key="NSFont" metaFont="system" size="10"/>
                                                             <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                                         </attributes>
                                                     </fragment>
@@ -145,7 +145,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="arrowtriangle.down.fill" catalog="system" width="128" height="124"/>
+        <image name="downarrow" width="524" height="344"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
